# routes/users.js
@@ -5,7 +5,7 @@ const { requiresAuth } = require('express-openid-connect');
 const userController = require('../controllers/users');
 const validation = require('../middleware/validate');
 
-router.get('/', requiresAuth(), userController.getAll);
+router.get('/getAll/', requiresAuth(), userController.getAll);
 router.get('/:id', requiresAuth(), userController.getSingle);
 router.post('/', requiresAuth(), validation.saveUser, userController.createUser);
 router.put('/:id', requiresAuth(), validation.saveUser, userController.updateUser);
